# coap_loki

./: .gitignore  CLI.md  CMakeLists.txt  CMakePresets.json  Dockerfile  INTERFACES.md  Kconfig  PROGRESS.md  README.md  app_version.h.in  coap_loki.code-workspace  display-ssd1306-ncs3.conf  display-ssd1306-promicro.overlay  display-ssd1306.conf  display-ssd1306.overlay  flash_storage.overlay  flash_storage_nrf54.overlay  loki_app.conf  motor-dummy.overlay  no_static.yml  overay-uart-logging.conf  overlay-debug.conf  overlay-logging-usb.conf  overlay-logging.conf  prj-ncs3.conf  prj.conf  rehaul_motor_drivers.txt  ssd1306_default.overlay  sysbuild.cmake
OVERVIEW/: architecture.md  communication.md  configuration.md  display.md  hardware.md  motor-control.md
TODO/: 01-ble-gatt-fixes.md  02-coap-fixes.md  03-dns-sd-discovery.md  04-machine-readable-descriptors.md  05-lvgl-font-bloat.md  IMPLEMENTATION_PLAN.md  README.md
boards/: nrf52840dk_nrf52840.overlay  nrf52840dongle_nrf52840.conf  nrf52840dongle_nrf52840.overlay  nrf52840dongle_nrf52840_pm_static.yml  nrf5340dk_nrf5340ns.overlay  nrf54-overlay.conf  nrf54L15dk_nrf54L15.overlay  promicro_nrf52840.conf  promicro_nrf52840.overlay
boards/boards/trencitos/minewsemi_custom1/: Kconfig.defconfig  Kconfig.minewsemi_custom1  board.yml  minewsemi_custom1_nrf54l15_cpuapp.dts  minewsemi_custom1_nrf54l15_cpuapp.yaml  minewsemi_custom1_nrf54l15_cpuapp_defconfig
boards/promicro_nrf52840/: Kconfig.defconfig  promicro_nrf52840_nrf52840_common.dts  promicro_nrf52840_nrf52840_uf2.dts
drivers/: CMakeLists.txt
drivers/motor/: CMakeLists.txt  Kconfig  dummy_motor.c  tb67h450.c  tb67h453.c
dts/bindings/motor/: generic,dummy-motor.yaml  toshiba,tb67h450.yaml  toshiba,tb67h453.yaml
interface/: README.md  coap.yaml  gatt.yaml  loki_server_client_interface.h
src/: 1306_display.c  coap_server.c  loki_coap_utils.c  loki_coap_utils.h  main.c  main_ble_utils.c  main_ble_utils.h  main_display.h  main_loki.c  main_loki.h  main_ot_utils.c  main_ot_utils.h
src/displays/: 1306_display.c  main_display.h  no_display.c
src/motors/: CMakeLists.txt  motor.h  motorTB67H453.c  motorTB67driver.c  motor_choice.kconfig  motor_dummy.c
tools/: gen_descriptors.py
